<resources>
    <string name="app_name">TetsujinTime</string>

    <!-- login -->
    <string name="login">ログイン</string>
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <!-- &#8230 = ... -->
    <string name="forget_input_all">メールアドレスと\nパスワードを入力してください！</string>
    <string name="forget_input_email">メールアドレスを入力してください！</string>
    <string name="forget_input_password">パスワードを入力してください！</string>
    <string name="logging_in">ログイン中&#8230;</string>
    <string name="wrong_email_or_password">メールアドレスまたは\nパスワードが間違っています。</string>
    <string name="failed_login">ログインに失敗しました。</string>

    <!-- register -->
    <string name="sign_up">新規登録</string>
    <string name="register">登録</string>
    <string name="mailaddress">メールアドレス</string>
    <string name="hint_mailaddress">example@example.jp</string>
    <string name="confirm_password">パスワード(確認用)</string>
    <string name="department">学科</string>
    <string name="grade">学年</string>
    <string name="student_class">組</string>
    <string name="hint_number">1</string>

    <!-- weeks -->
    <string name="week_monday">月</string>
    <string name="week_tuesday">火</string>
    <string name="week_wednesday">水</string>
    <string name="week_thursday">木</string>
    <string name="week_friday">金</string>
    <string name="week_saturday">土</string>
    <string name="week_sunday">日</string>

    <!-- notification title -->
    <string name="notification_title">お知らせ</string>
    <string name="notification_receive_num">件のお知らせが来ています</string>

    <!-- error -->
    <string name="error">エラー</string>
    <string name="error_memo_cannot_save">メモを保存できませんでした。</string>
    <string name="error_server_unavailable">数分後にまたやり直してください。</string>
    <string name="error_cannot_connected_network">ネットワークに接続できません。\nネットワークの設定を見直してください。</string>
    <string name="error_something">何かのエラーが発生しました。\nもう一度ログインしてください。</string>
    <string name="error_json_template">{ error_description : REPLACE_HERE }</string>
    <string name="error_json_template_replace_text">REPLACE_HERE</string>

    <!-- fragmentmain -->
    <string name="getdata">時間割のデータを取得しています&#8230;</string>
    <string name="lesson_detail">授業の詳細</string>
    <string name="lesson_name">授業名：</string>
    <string name="classroom">教室：</string>
    <string name="starttime">開始時間：</string>
    <string name="endtime">終了時間：</string>
    <string name="teacher">講師：</string>
    <string name="description">詳細：</string>
    <string name="ok">OK</string>
    <string name="format_yyyy_MM_dd">yyyy-MM-dd</string>
    <string name="format_MM_dd_E">MM/dd(E)</string>

</resources>
