<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context="com.tetsujin.tt.login.ActivityRegister">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="30dp"
            android:text="@string/sign_up"
            android:textSize="50sp"/>

        <TextView
            style="@style/inputdesc"
            android:text="@string/student_id"/>
        
        <EditText
            android:id="@+id/AyRegister_studentid_edittext"
            style="@style/inputform"
            android:maxLength="9"
            android:hint="@string/hint_student_id"/>
        
        <TextView
            style="@style/inputdesc"
            android:text="@string/mailaddress"/>
        
        <EditText
            android:id="@+id/AyRegister_mailaddress_edittext"
            style="@style/inputform"
            android:hint="@string/hint_mailaddress"
            android:inputType="textEmailAddress"/>
        
        <TextView
            style="@style/inputdesc"
            android:text="@string/password"/>
        
        <EditText
            android:id="@+id/AyRegister_password_edittext"
            style="@style/inputform"
            android:inputType="textPassword"/>

        <TextView
            style="@style/inputdesc"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/AyRegister_confirm_password_edittext"
            style="@style/inputform"
            android:inputType="textPassword"/>
        
        <TextView
            style="@style/inputdesc"
            android:text="@string/department"/>
        
        <Spinner
            android:id="@+id/AyRegister_college_list_spinner"
            style="@style/inputform"/>
        
        <TextView
            style="@style/inputdesc"
            android:text="@string/grade"/>
        
        <EditText
            android:id="@+id/AyRegister_grade_edittext"
            style="@style/inputform"
            android:layout_width="50dp"
            android:layout_gravity="start"
            android:layout_marginLeft="40dp"
            android:maxLength="2"
            android:hint="@string/hint_number"
            android:inputType="number" />
        
        <TextView
            style="@style/inputdesc"
            android:text="@string/student_class"/>
        
        <EditText
            android:id="@+id/AyRegister_class_edittext"
            style="@style/inputform"
            android:layout_width="50dp"
            android:layout_gravity="start"
            android:layout_marginLeft="40dp"
            android:maxLength="2"
            android:hint="@string/hint_number"
            android:inputType="number"/>
        
        <Button
            android:id="@+id/AyRegister_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/register"
            android:textSize="40sp"/>
    </LinearLayout>
</ScrollView>

