<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/items_monday"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/week_monday"/>
    
    <TextView
        android:id="@+id/items_tuesday"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/week_tuesday"/>
    
    <TextView
        android:id="@+id/items_wednesday"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/week_wednesday"/>
    
    <TextView
        android:id="@+id/items_thursday"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/week_thursday"/>
    
    <TextView
        android:id="@+id/items_friday"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/week_friday"/>
    
    </LinearLayout>
